@@ -120,6 +120,7 @@
         <a href='../../class/c3/Sankey.html#link_target-variable'>link_target</a>
         <a href='../../class/c3/Sankey.html#link_key-variable'>link_key</a>
         <a href='../../class/c3/Sankey.html#link_value-variable'>link_value</a>
+        <a href='../../class/c3/Sankey.html#safe-variable'>safe</a>
         <a href='../../class/c3/Sankey.html#iterations-variable'>iterations</a>
         <a href='../../class/c3/Sankey.html#alpha-variable'>alpha</a>
         <a href='../../class/c3/Sankey.html#node_padding-variable'>node_padding</a>
