@@ -204,6 +204,19 @@ This defaults to using the <code>value</code> member of the link object.</p>
 <div class='tags'>
 </div>
   </dd>
+  <dt id='safe-variable'>
+    safe
+    =
+  </dt>
+  <dd>
+    <pre><code class='coffeescript'>true</code></pre>
+    <div class='docstring'>
+  <p>[Boolean] Safe mode will ensure that the sum of the link values are not
+greater than node values for each particular node</p>
+</div>
+<div class='tags'>
+</div>
+  </dd>
   <dt id='iterations-variable'>
     iterations
     =
